return strategies for list of organizations